--- a/stage.html
+++ b/stage.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>桜舞う空キャッチゲーム - 究極版</title>
   <style>
-    /* CSSは前回と変更ありませんので省略します。前回のものをそのままお使いください。 */
     * { margin: 0; padding: 0; box-sizing: border-box; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -webkit-touch-callout: none; -webkit-tap-highlight-color: transparent; }
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
     body { width: 100vw; height: 100vh; overflow: hidden; position: relative; background: linear-gradient(135deg, #ffeef5 0%, #ffe8f0 25%, #f8e8ff 50%, #e8f0ff 75%, #f0f8ff 100%); font-family: 'Noto Sans JP', sans-serif; touch-action: manipulation; -webkit-overflow-scrolling: touch; }
@@ -15,9 +14,35 @@
     #character.jump { animation: jump 0.6s ease; }
     #character.powerup { filter: drop-shadow(0 0 15px #FFD700) drop-shadow(2px 4px 8px rgba(0,0,0,0.2)); transform: translateX(-50%) scale(1.1); }
     @keyframes jump { 0% { transform: translateX(-50%) translateY(0); } 30% { transform: translateX(-50%) translateY(-60px); } 60% { transform: translateX(-50%) translateY(-60px); } 100% { transform: translateX(-50%) translateY(0); } }
-    .petal { position: absolute; width: 35px; height: 35px; background: radial-gradient(ellipse at center, #ffb3d9 0%, #ffc9e0 40%, #ffe0f0 80%, rgba(255, 192, 224, 0.8) 100%); border-radius: 50% 10% 50% 10%; box-shadow: 0 2px 4px rgba(255, 105, 180, 0.3), inset 0 1px 2px rgba(255, 255, 255, 0.5); pointer-events: none; animation: fall linear; z-index: 1; filter: drop-shadow(0 0 3px rgba(255, 182, 193, 0.6)); }
-    .petal.special { width: 40px; height: 40px; background: radial-gradient(circle, #FFD700 0%, #FFA500 50%, #FF69B4 100%); filter: drop-shadow(0 0 8px rgba(255, 215, 0, 0.8)); animation: fall-special linear; }
-    .petal.golden { width: 45px; height: 45px; background: radial-gradient(circle, #FFD700 0%, #FFFF00 30%, #FFA500 70%, #FF4500 100%); filter: drop-shadow(0 0 15px rgba(255, 215, 0, 1)) drop-shadow(0 0 8px rgba(255, 255, 255, 0.8)); animation: fall-golden linear; border: 2px solid rgba(255, 255, 255, 0.8); }
+
+    /* ★★★ メインの花びらのスタイルを変更 ★★★ */
+    .petal {
+      position: absolute;
+      width: 35px;  /* 画像のサイズに合わせて調整してください */
+      height: 35px; /* 画像のサイズに合わせて調整してください */
+      background-image: url('petal.png'); /* 画像ファイルを指定 */
+      background-color: transparent;    /* 背景を透明に */
+      background-repeat: no-repeat;     /* 画像の繰り返しを無効に */
+      background-position: center;      /* 画像を中央に配置 */
+      background-size: contain;         /* 画像の縦横比を保ちつつフィット */
+      pointer-events: none;
+      animation: fall linear; /* アニメーション名を fall のまま使用 */
+      z-index: 1;
+      filter: drop-shadow(0 0 2px rgba(220, 20, 60, 0.3)); /* 影を少し調整 (任意) */
+      /* border-radius と box-shadow は画像を使用するため削除 */
+    }
+
+    .petal.special { /* 特殊な花びらは変更なし */
+        position: absolute; /* 念のため */
+        width: 40px; height: 40px; background: radial-gradient(circle, #FFD700 0%, #FFA500 50%, #FF69B4 100%);
+        filter: drop-shadow(0 0 8px rgba(255, 215, 0, 0.8)); animation: fall-special linear; border-radius:50%;
+    }
+    .petal.golden { /* 金の花びらは変更なし */
+        position: absolute; /* 念のため */
+        width: 45px; height: 45px; background: radial-gradient(circle, #FFD700 0%, #FFFF00 30%, #FFA500 70%, #FF4500 100%);
+        filter: drop-shadow(0 0 15px rgba(255, 215, 0, 1)) drop-shadow(0 0 8px rgba(255, 255, 255, 0.8));
+        animation: fall-golden linear; border: 2px solid rgba(255, 255, 255, 0.8); border-radius:50%;
+    }
     .bomb { position: absolute; width: 40px; height: 40px; background: radial-gradient(circle, #FF0000 0%, #8B0000 70%, #000000 100%); border-radius: 50%; filter: drop-shadow(0 0 10px rgba(255, 0, 0, 0.8)); animation: fall-bomb linear; }
     .bomb::before { content: '💣'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 25px; animation: bomb-pulse 0.5s infinite alternate; }
     @keyframes bomb-pulse { 0% { transform: translate(-50%, -50%) scale(1); } 100% { transform: translate(-50%, -50%) scale(1.2); } }
@@ -28,9 +53,22 @@
     @keyframes time-pulse { 0% { transform: translate(-50%, -50%) scale(1) rotate(0deg); opacity: 0.7; } 50% { transform: translate(-50%, -50%) scale(1.1) rotate(10deg); opacity: 1; } 100% { transform: translate(-50%, -50%) scale(1) rotate(0deg); opacity: 0.7; } }
     @keyframes star-spin { 0% { transform: translate(-50%, -50%) rotate(0deg) scale(1); } 50% { transform: translate(-50%, -50%) rotate(180deg) scale(1.2); } 100% { transform: translate(-50%, -50%) rotate(360deg) scale(1); } }
     @keyframes rainbow-rotate { 0% { filter: drop-shadow(0 0 15px rgba(147, 112, 219, 0.8)) hue-rotate(0deg); } 100% { filter: drop-shadow(0 0 15px rgba(147, 112, 219, 0.8)) hue-rotate(360deg); } }
-    @keyframes fall { 0% { transform: translateY(-50px) rotate(0deg) scale(0.8); opacity: 0.6; } 25% { opacity: 1; transform: translateY(25vh) rotate(90deg) scale(1); } 50% { transform: translateY(50vh) rotate(180deg) scale(1.1); } 75% { transform: translateY(75vh) rotate(270deg) scale(1); } 100% { transform: translateY(100vh) rotate(360deg) scale(0.9); opacity: 0.8; } }
-    @keyframes fall-special { 0% { transform: translateY(-50px) rotate(0deg) scale(0.8); opacity: 0.8; } 25% { opacity: 1; transform: translateY(25vh) rotate(90deg) scale(1.2); } 50% { transform: translateY(50vh) rotate(180deg) scale(1.3); } 75% { transform: translateY(75vh) rotate(270deg) scale(1.1); } 100% { transform: translateY(100vh) rotate(360deg) scale(1); opacity: 0.9; } }
-    @keyframes fall-golden { 0% { transform: translateY(-50px) rotate(0deg) scale(0.9); opacity: 0.9; } 25% { opacity: 1; transform: translateY(25vh) rotate(120deg) scale(1.3); } 50% { transform: translateY(50vh) rotate(240deg) scale(1.4); } 75% { transform: translateY(75vh) rotate(300deg) scale(1.2); } 100% { transform: translateY(100vh) rotate(480deg) scale(1); opacity: 1; } }
+
+    /* ★★★ 花びらの落下アニメーションを変更 ★★★ */
+    @keyframes fall {
+      0% { transform: translateY(-60px) rotateZ(0deg) rotateX(0deg) scale(0.9); opacity: 0.5; }
+      25% { transform: translateY(25vh) rotateZ(180deg) rotateX(45deg) scale(1); opacity: 1; }
+      50% { transform: translateY(50vh) rotateZ(360deg) rotateX(-30deg) scale(1.1); opacity: 1; }
+      75% { transform: translateY(75vh) rotateZ(540deg) rotateX(60deg) scale(1); opacity: 0.8; }
+      100% { transform: translateY(105vh) rotateZ(720deg) rotateX(0deg) scale(0.8); opacity: 0; }
+    }
+
+    @keyframes fall-special { /* 特殊な花びらのアニメーションは変更なし */
+        0% { transform: translateY(-50px) rotate(0deg) scale(0.8); opacity: 0.8; } 25% { opacity: 1; transform: translateY(25vh) rotate(90deg) scale(1.2); } 50% { transform: translateY(50vh) rotate(180deg) scale(1.3); } 75% { transform: translateY(75vh) rotate(270deg) scale(1.1); } 100% { transform: translateY(100vh) rotate(360deg) scale(1); opacity: 0.9; }
+    }
+    @keyframes fall-golden { /* 金の花びらのアニメーションは変更なし */
+        0% { transform: translateY(-50px) rotate(0deg) scale(0.9); opacity: 0.9; } 25% { opacity: 1; transform: translateY(25vh) rotate(120deg) scale(1.3); } 50% { transform: translateY(50vh) rotate(240deg) scale(1.4); } 75% { transform: translateY(75vh) rotate(300deg) scale(1.2); } 100% { transform: translateY(100vh) rotate(480deg) scale(1); opacity: 1; }
+    }
     @keyframes fall-bomb { 0% { transform: translateY(-50px) rotate(0deg) scale(1); opacity: 1; } 30% { transform: translateY(30vh) rotate(-20deg) scale(1.05); } 60% { transform: translateY(60vh) rotate(15deg) scale(1.1); } 100% { transform: translateY(100vh) rotate(10deg) scale(1); opacity: 1; } }
     @keyframes fall-powerup { 0% { transform: translateY(-50px) scale(0.8); opacity: 0.8; } 25% { opacity: 1; transform: translateY(25vh) scale(1.1); } 50% { transform: translateY(50vh) scale(1.2); } 75% { transform: translateY(75vh) scale(1.1); } 100% { transform: translateY(100vh) scale(1); opacity: 1; } }
     @keyframes fall-time-plus { 0% { transform: translateY(-50px) translateX(0px) rotate(0deg) scale(0.9); opacity: 0.7;} 25% { opacity: 1; transform: translateY(25vh) translateX(10px) rotate(5deg) scale(1);} 50% { transform: translateY(50vh) translateX(-10px) rotate(-5deg) scale(1.1);} 75% { transform: translateY(75vh) translateX(5px) rotate(2deg) scale(1);} 100% { transform: translateY(100vh) translateX(0px) rotate(0deg) scale(0.9); opacity: 1;} }
@@ -79,6 +117,8 @@
   </div>
 
   <script>
+    // JavaScript部分は前回から変更ありませんので、そのままお使いください。
+    // 以下は前回のJavaScriptコードです。
     document.addEventListener('contextmenu', e => { e.preventDefault(); return false; }, { passive: false });
     document.addEventListener('selectstart', e => { e.preventDefault(); return false; }, { passive: false });
     document.addEventListener('dragstart', e => { e.preventDefault(); return false; }, { passive: false });
@@ -106,7 +146,6 @@
     } else {
       character.src = "shaoran_web.PNG";
       character.alt = "シャオラン";
-      // console.warn("キャラクター選択情報がlocalStorageに見つかりませんでした。デフォルトキャラクターを表示します。"); // デバッグ時以外はコメントアウト推奨
     }
 
     let score = 0;
@@ -125,23 +164,19 @@
     let powerUpEndTime = 0;
     let characterX = window.innerWidth / 2;
 
-    // ★★★ オーディオオブジェクトの宣言を追加 ★★★
     let se, bgm, seTimePlus, seBomb, sePowerUp;
     try {
-      se = new Audio("kirarin.mp3"); // 通常アイテム（花びら）取得音
+      se = new Audio("kirarin.mp3");
       bgm = new Audio("bgm.mp3");
-      // ★★★ 新しい効果音の読み込み ★★★
       seTimePlus = new Audio("tm.mp3");
       seBomb = new Audio("bom.mp3");
       sePowerUp = new Audio("st.mp3");
-
       bgm.loop = true;
       bgm.volume = 0.3;
     } catch (error) {
       console.error("オーディオの初期化に失敗: ", error);
       se = { play: () => {}, currentTime: 0 };
       bgm = { play: () => Promise.resolve(), loop: true, volume: 0.3 };
-      // ★★★ エラー時のダミーオブジェクトも追加 ★★★
       seTimePlus = { play: () => {}, currentTime: 0 };
       seBomb = { play: () => {}, currentTime: 0 };
       sePowerUp = { play: () => {}, currentTime: 0 };
@@ -149,7 +184,7 @@
 
     try {
       highscore = parseInt(localStorage.getItem("sakuraGameHighscoreV2")) || 0;
-    } catch (error) { /* console.log("ローカルストレージのハイスコアにアクセスできません"); */ } // エラーはコンソールに表示しないようにもできる
+    } catch (error) { }
     highscoreDisplay.innerText = highscore;
 
     function createBackgroundParticle() {
@@ -163,7 +198,6 @@
     }
 
     function updateCharacterPosition() { character.style.left = `${characterX}px`; }
-
     function calculateLevel() {
       let newCalculatedLevel = 1;
       for (let i = 0; i < levelThresholds.length; i++) {
@@ -171,77 +205,47 @@
       }
       return Math.min(newCalculatedLevel, MAX_LEVEL);
     }
-
     function getSpawnRate() { return Math.max(150, 700 - (level * 40)); }
-
     function updateScore(points = 1) {
       const previousLevel = level;
       if (isPowerUpActive) points *= 2;
       score += points; combo++;
       scoreDisplay.innerText = score; comboDisplay.innerText = combo;
       level = calculateLevel(); levelDisplay.innerText = level;
-
       if (level > previousLevel) {
         if (level === MAX_LEVEL && previousLevel < MAX_LEVEL) { showLevelUp(`MAX LEVEL ${MAX_LEVEL} 到達!`); }
         else if (level < MAX_LEVEL) { showLevelUp(`LEVEL ${level}!`); }
       }
-
       if (combo > 1) showComboPopup();
       if (combo > maxCombo) maxCombo = combo;
-      // ★★★ 花びら系アイテムのSE再生（元々ここにあった）★★★
-      if (se && typeof se.play === 'function') {
-        se.currentTime = 0;
-        se.play().catch(err => console.warn("kirarin.mp3 再生エラー:", err));
-      }
-      if (points >= 5) showSpecialEffect(); // ゴールデン花びらなどの高得点時
+      if (se && typeof se.play === 'function') { se.currentTime = 0; se.play().catch(err => console.warn("kirarin.mp3 再生エラー:", err)); }
+      if (points >= 5) showSpecialEffect();
     }
-
     function resetCombo() { combo = 0; comboDisplay.innerText = combo; }
-    function showComboPopup() {
-      comboPopup.textContent = `${combo} COMBO!`; comboPopup.style.display = 'block';
-      setTimeout(() => { comboPopup.style.display = 'none'; }, 1000);
-    }
-    function showLevelUp(message = `LEVEL ${level}!`) {
-      levelUpEffect.textContent = message; levelUpEffect.style.display = 'block';
-      setTimeout(() => { levelUpEffect.style.display = 'none'; }, 2000);
-    }
-    function showSpecialEffect() {
-      scoreDisplay.style.transform = 'scale(1.3)'; scoreDisplay.style.color = '#FFD700';
-      setTimeout(() => { scoreDisplay.style.transform = 'scale(1)'; scoreDisplay.style.color = '#5a3d5c'; }, 500);
-    }
-
+    function showComboPopup() { comboPopup.textContent = `${combo} COMBO!`; comboPopup.style.display = 'block'; setTimeout(() => { comboPopup.style.display = 'none'; }, 1000); }
+    function showLevelUp(message = `LEVEL ${level}!`) { levelUpEffect.textContent = message; levelUpEffect.style.display = 'block'; setTimeout(() => { levelUpEffect.style.display = 'none'; }, 2000); }
+    function showSpecialEffect() { scoreDisplay.style.transform = 'scale(1.3)'; scoreDisplay.style.color = '#FFD700'; setTimeout(() => { scoreDisplay.style.transform = 'scale(1)'; scoreDisplay.style.color = '#5a3d5c'; }, 500); }
     let powerUpTimerId = null;
     function activatePowerUp() {
-      if (isPowerUpActive) {
-        powerUpEndTime += 10000; if (powerUpTimerId) clearInterval(powerUpTimerId);
-      } else {
-        isPowerUpActive = true; powerUpEndTime = Date.now() + 10000;
-        character.classList.add('powerup'); powerEffect.textContent = '✨ダブルスコア中！'; powerEffect.style.display = 'block';
-      }
+      if (isPowerUpActive) { powerUpEndTime += 10000; if (powerUpTimerId) clearInterval(powerUpTimerId); }
+      else { isPowerUpActive = true; powerUpEndTime = Date.now() + 10000; character.classList.add('powerup'); powerEffect.textContent = '✨ダブルスコア中！'; powerEffect.style.display = 'block'; }
       powerUpTimerId = setInterval(() => {
         const remaining = Math.ceil((powerUpEndTime - Date.now()) / 1000);
         if (remaining <= 0) { clearInterval(powerUpTimerId); powerUpTimerId = null; deactivatePowerUp(); }
         else { powerEffect.textContent = `✨ダブルスコア中！(${remaining}s)`; }
       }, 100);
     }
-    function deactivatePowerUp() {
-      isPowerUpActive = false; character.classList.remove('powerup'); powerEffect.style.display = 'none';
-      if (powerUpTimerId) { clearInterval(powerUpTimerId); powerUpTimerId = null; }
-    }
+    function deactivatePowerUp() { isPowerUpActive = false; character.classList.remove('powerup'); powerEffect.style.display = 'none'; if (powerUpTimerId) { clearInterval(powerUpTimerId); powerUpTimerId = null; } }
 
     function createItem() {
       if (timeLeft <= 0) return;
-      // console.log(`createItem called. Level: ${level}, TimeLeft: ${timeLeft}`);
-
       const item = document.createElement("div");
       const rand = Math.random();
       let itemType = "normal";
-
       let probBomb = 0; if (level >= 2) { probBomb = Math.min(0.05 + (level - 2) * 0.03, 0.14); }
       const probTimePlus = 0.08;
       let probPowerUp = 0; if (level >= 2) { probPowerUp = 0.07; }
       const probGolden = 0.15; const probSpecial = 0.20;
-
       let cumulativeProb = 0;
       cumulativeProb += probBomb;
       if (rand < cumulativeProb && level >= 2) { itemType = "bomb"; }
@@ -262,7 +266,6 @@
           }
         }
       }
-      // console.log(`Rand: ${rand.toFixed(3)}, ItemType: ${itemType}, cProb: ${cumulativeProb.toFixed(3)} (Bomb: ${probBomb.toFixed(3)}, Time: ${probTimePlus.toFixed(3)}, PowerUp: ${probPowerUp.toFixed(3)})`);
 
       switch(itemType) {
         case "bomb": item.className = "bomb"; item.dataset.type = "bomb"; item.dataset.points = "-10"; break;
@@ -277,7 +280,6 @@
       let animationDuration = Math.max(1.5, (2 + Math.random() * 2) - (level * 0.1));
       item.style.animationDuration = animationDuration + "s";
       document.body.appendChild(item);
-      // console.log(`Appended item: ${itemType}`);
 
       const checkCollision = setInterval(() => {
         if (!item.parentNode || timeLeft <= 0) {
@@ -288,31 +290,16 @@
           const type = item.dataset.type;
           if (type === "bomb") {
             score = Math.max(0, score + parseInt(item.dataset.points)); scoreDisplay.innerText = score; resetCombo();
-            // ★★★ 爆弾の効果音 ★★★
-            if (seBomb && typeof seBomb.play === 'function') {
-                seBomb.currentTime = 0;
-                seBomb.play().catch(err => console.warn("bom.mp3 再生エラー:", err));
-            }
+            if (seBomb && typeof seBomb.play === 'function') { seBomb.currentTime = 0; seBomb.play().catch(err => console.warn("bom.mp3 再生エラー:", err));}
             document.body.style.background = '#ff6b6b';
             setTimeout(() => { document.body.style.background = 'linear-gradient(135deg, #ffeef5 0%, #ffe8f0 25%, #f8e8ff 50%, #e8f0ff 75%, #f0f8ff 100%)'; }, 150);
           } else if (type === "timePlus") {
             timeLeft = Math.min(timeLeft + 5, MAX_TIME_LEFT); timerDisplay.innerText = timeLeft;
-            // ★★★ 時間増加アイテムの効果音 ★★★
-            if (seTimePlus && typeof seTimePlus.play === 'function') {
-                seTimePlus.currentTime = 0;
-                seTimePlus.play().catch(err => console.warn("tm.mp3 再生エラー:", err));
-            }
-            // console.log("Time+ item collected!");
+            if (seTimePlus && typeof seTimePlus.play === 'function') { seTimePlus.currentTime = 0; seTimePlus.play().catch(err => console.warn("tm.mp3 再生エラー:", err));}
           } else if (type === "powerup") {
-            // ★★★ パワーアップアイテムの効果音 ★★★
-            if (sePowerUp && typeof sePowerUp.play === 'function') {
-                sePowerUp.currentTime = 0;
-                sePowerUp.play().catch(err => console.warn("st.mp3 再生エラー:", err));
-            }
+            if (sePowerUp && typeof sePowerUp.play === 'function') { sePowerUp.currentTime = 0; sePowerUp.play().catch(err => console.warn("st.mp3 再生エラー:", err));}
             activatePowerUp();
-          } else { // 花びら系アイテム (通常、特殊、ゴールデン)
-            updateScore(parseInt(item.dataset.points)); // updateScore内でkirarin.mp3が再生される
-          }
+          } else { updateScore(parseInt(item.dataset.points)); }
           item.remove(); clearInterval(checkCollision);
         }
       }, 30);
@@ -345,7 +332,7 @@
       if (score > highscore) {
         highscore = score;
         try { localStorage.setItem("sakuraGameHighscoreV2", highscore); highscoreDisplay.innerText = highscore; }
-        catch (error) { /* console.log("ハイスコアの保存に失敗しました"); */ }
+        catch (error) { }
       }
       document.querySelectorAll('.petal, .bomb, .power-up, .time-plus, .bg-particle').forEach(el => el.remove());
       if (returnToSelectBtn) { returnToSelectBtn.addEventListener("click", () => { window.location.href = "index.html"; }); }
