--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       <img src="yuii_web.PNG" alt="ゆい">
       <div class="name">ゆい</div>
     </div>
-  </div>
+    <div class="character" onclick="selectCharacter('ジャノメ', 'janome.PNG')">
+      <img src="janome.PNG" alt="ジャノメ">
+      <div class="name">ジャノメ</div>
+    </div>
+    </div>
 
   <script>
     function selectCharacter(name, image) {
