--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <img src="yuii_web.PNG" alt="ゆい">
       <div class="name">ゆい</div>
     </div>
-    <div class="character" onclick="selectCharacter('ジャノメ', 'janome.PNG')">
-      <img src="janome.PNG" alt="ジャノメ">
+    <div class="character" onclick="selectCharacter('ジャノメ', 'janome..PNG')">
+      <img src="janome..PNG" alt="ジャノメ">
       <div class="name">ジャノメ</div>
     </div>
     </div>
