--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>桜舞う空キャッチゲーム - オープニング</title>
+  <title>忍風桜 - オープニング</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
     body {
@@ -68,7 +68,7 @@
   </style>
 </head>
 <body>
-  <h1 id="game-title">桜舞う空キャッチゲーム</h1>
+  <h1 id="game-title">忍風桜</h1>
   <button class="start-button" onclick="goToCharacterSelect()">ゲーム開始</button>
 
   <script>
