--- a/index.html
+++ b/index.html
@@ -13,80 +13,80 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg, #f0f8ff 0%, #e6e6fa 50%, #ffe4e1 100%);
+      /* ★★★ 背景を黒のグラデーションに変更 ★★★ */
+      background: linear-gradient(135deg, #1c1c1c 0%, #3c3c3c 100%); /* 暗いチャコール系のグラデーション */
       font-family: 'Noto Sans JP', sans-serif;
       text-align: center;
       overflow: hidden; /* パーティクルがはみ出さないように */
     }
     #game-title {
-      font-size: 3.8em; /* 少し大きく */
-      color: #ff69b4;
-      text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25); /* 影を少し濃く */
-      margin-bottom: 40px; /* ボタンとの間隔を調整 */
+      font-size: 3.8em;
+      color: #ff69b4; /* ホットピンク - 黒背景で映えます */
+      text-shadow: 0 0 8px rgba(255, 105, 180, 0.7), 0 0 12px rgba(255, 105, 180, 0.5); /* ネオン風の影 */
+      margin-bottom: 40px;
       animation: title-float 2.5s ease-in-out infinite alternate;
-      z-index: 10; /* ボタンやパーティクルより手前に */
+      z-index: 10;
     }
     @keyframes title-float {
       0% { transform: translateY(0px) scale(1); }
-      50% { transform: translateY(-12px) scale(1.03); } /* 浮遊感を強調 */
+      50% { transform: translateY(-12px) scale(1.03); }
       100% { transform: translateY(0px) scale(1); }
     }
     .start-button {
-      padding: 20px 40px; /* 少し大きめに */
-      font-size: 2em;    /* 少し大きめに */
+      padding: 20px 40px;
+      font-size: 2em;
       color: white;
-      background: linear-gradient(145deg, #ff7f50, #ff6347);
+      /* ボタンの色も背景に合わせて少し調整 (例: 少し明るめの色や、メタリックな感じも合います) */
+      background: linear-gradient(145deg, #6A5ACD, #483D8B); /* スレートブルーからダークスレートブルー */
       border: none;
       border-radius: 15px;
       cursor: pointer;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* 影を少し強く */
       transition: all 0.2s ease-out;
       text-transform: uppercase;
       letter-spacing: 1.5px;
-      z-index: 10; /* パーティクルより手前に */
+      z-index: 10;
     }
     .start-button:hover {
-      background: linear-gradient(145deg, #ff6347, #ff4500);
-      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.35);
-      transform: translateY(-4px) scale(1.02); /* ホバー時の動きを大きく */
+      background: linear-gradient(145deg, #483D8B, #3A2D6B); /* 少し濃く */
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.4);
+      transform: translateY(-4px) scale(1.02);
     }
     .start-button:active {
-      transform: translateY(0px) scale(1); /* クリック時の戻りを調整 */
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transform: translateY(0px) scale(1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     }
 
-    /* 桜のパーティクル背景 */
     .sakura-particle {
       position: absolute;
-      background-color: rgba(255, 192, 203, 0.8); /* 少し濃いピンク */
-      border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; /* 花びらっぽい形 */
+      background-color: rgba(255, 192, 203, 0.85); /* 黒背景なので少し透明度を上げるか、色を明るくしても良い */
+      border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
       animation: fall-sakura linear infinite;
       pointer-events: none;
-      z-index: 1; /* タイトルやボタンより後ろに */
-      opacity: 0; /* 初期状態は透明 */
+      z-index: 1;
+      opacity: 0;
     }
     @keyframes fall-sakura {
       0% { transform: translateY(-10vh) translateX(var(--start-x)) rotate(0deg) scale(var(--scale)); opacity: 0; }
       10% { opacity: 1; }
-      95% { opacity: 0.5; }
+      95% { opacity: 0.7; } /* 黒背景なので少し長めに表示 */
       100% { transform: translateY(110vh) translateX(var(--end-x)) rotate(var(--rotate-end)) scale(var(--scale)); opacity: 0; }
     }
 
-    /* 星のパーティクルスタイル */
     .star-particle {
         position: absolute;
-        background-color: rgba(255, 255, 224, 0.9); /* 薄い黄色 */
+        background-color: rgba(255, 255, 224, 0.9);
         border-radius: 50%;
         animation: twinkle-fall linear infinite;
         pointer-events: none;
-        z-index: 1; /* タイトルやボタンより後ろに */
-        box-shadow: 0 0 6px rgba(255, 255, 224, 0.8), 0 0 12px rgba(255, 255, 224, 0.6);
-        opacity: 0; /* 初期状態は透明 */
+        z-index: 1;
+        box-shadow: 0 0 8px rgba(255, 255, 224, 0.9), 0 0 15px rgba(255, 255, 224, 0.7); /* 影を少し強調 */
+        opacity: 0;
     }
     @keyframes twinkle-fall {
         0% { transform: translateY(-15vh) translateX(var(--star-start-x)) scale(var(--star-scale)) rotate(0deg); opacity: 0; }
         15% { opacity: 1; }
-        85% { opacity: 0.6; }
+        85% { opacity: 0.8; } /* 黒背景なので少し長めに表示 */
         100% { transform: translateY(110vh) translateX(var(--star-end-x)) scale(calc(var(--star-scale) * 0.5)) rotate(720deg); opacity: 0; }
     }
   </style>
@@ -102,56 +102,49 @@
 
     function goToCharacterSelect() {
       if (bgm) {
-        bgm.pause(); // キャラクター選択画面に移動する前にBGMを停止
-        bgm.currentTime = 0; // 次回再生時に最初からになるように
+        bgm.pause();
+        bgm.currentTime = 0;
       }
       window.location.href = "character_select.html";
     }
 
     function createSakuraParticles() {
-      const numParticles = 35; // 桜パーティクルの数を少し増やす
+      const numParticles = 35;
       const body = document.body;
       for (let i = 0; i < numParticles; i++) {
         const particle = document.createElement('div');
         particle.classList.add('sakura-particle');
-        
-        const size = Math.random() * 12 + 6; // 6pxから18pxのサイズ
+        const size = Math.random() * 12 + 6;
         particle.style.width = `${size}px`;
-        particle.style.height = `${size * (Math.random() * 0.3 + 0.6)}px`; // 少し縦長にしたり
-        particle.style.setProperty('--scale', (Math.random() * 0.5 + 0.7).toFixed(2)); // スケールもランダムに
-
+        particle.style.height = `${size * (Math.random() * 0.3 + 0.6)}px`;
+        particle.style.setProperty('--scale', (Math.random() * 0.5 + 0.7).toFixed(2));
         const startX = `${Math.random() * 100}vw`;
         particle.style.setProperty('--start-x', startX);
-        // 終点のX座標も少しランダムに揺らす
-        const endXVariance = (Math.random() - 0.5) * 40; // -20vw から +20vw の範囲で揺れ
+        const endXVariance = (Math.random() - 0.5) * 40;
         particle.style.setProperty('--end-x', `calc(${startX} + ${endXVariance}vw)`);
-        particle.style.setProperty('--rotate-end', `${Math.random() * 720 + 360}deg`); // 最終回転角度もランダムに
-
-        particle.style.animationDuration = `${Math.random() * 8 + 7}s`; // 7秒から15秒
-        particle.style.animationDelay = `${Math.random() * 10}s`; // 開始タイミング
+        particle.style.setProperty('--rotate-end', `${Math.random() * 720 + 360}deg`);
+        particle.style.animationDuration = `${Math.random() * 8 + 7}s`;
+        particle.style.animationDelay = `${Math.random() * 10}s`;
         body.appendChild(particle);
       }
     }
 
     function createStarParticles() {
-        const numParticles = 30; // 星パーティクルの数も調整
+        const numParticles = 30;
         const body = document.body;
         for (let i = 0; i < numParticles; i++) {
             const particle = document.createElement('div');
             particle.classList.add('star-particle');
-            const size = Math.random() * 5 + 1; // 1pxから6pxの小さめの星
+            const size = Math.random() * 5 + 1;
             particle.style.width = `${size}px`;
             particle.style.height = `${size}px`;
-            
-            const starScale = Math.random() * 0.4 + 0.6; // 星のスケール
+            const starScale = Math.random() * 0.4 + 0.6;
             particle.style.setProperty('--star-scale', starScale.toFixed(2));
-
             const starStartX = `${Math.random() * 100}vw`;
             particle.style.setProperty('--star-start-x', starStartX);
-            const starEndXVariance = (Math.random() - 0.5) * 30; // -15vw から +15vw
+            const starEndXVariance = (Math.random() - 0.5) * 30;
             particle.style.setProperty('--star-end-x', `calc(${starStartX} + ${starEndXVariance}vw)`);
-
-            particle.style.animationDuration = `${Math.random() * 6 + 5}s`; // 5秒から11秒
+            particle.style.animationDuration = `${Math.random() * 6 + 5}s`;
             particle.style.animationDelay = `${Math.random() * 8}s`;
             body.appendChild(particle);
         }
@@ -159,7 +152,7 @@
 
     window.onload = function() {
       if (bgm) {
-        bgm.volume = 0.5; // BGMの音量 (0.0 から 1.0)
+        bgm.volume = 0.5;
         bgm.play().catch(error => {
           console.warn("オープニングBGMの自動再生に失敗:", error, "ユーザー操作後に再生を試みます。");
           const playBgmOnFirstInteraction = () => {
@@ -167,7 +160,6 @@
             document.body.removeEventListener('click', playBgmOnFirstInteraction, true);
             document.body.removeEventListener('touchstart', playBgmOnFirstInteraction, true);
           };
-          // captureフェーズでリスナーを登録して、start-buttonのクリックより先に発火させる
           document.body.addEventListener('click', playBgmOnFirstInteraction, true);
           document.body.addEventListener('touchstart', playBgmOnFirstInteraction, true);
         });
